# drug-interaction-detection-system

./: .gitignore  AGENTS.md  PROJECT_BRIEF.md  README.md  pyproject.toml
configs/: default.toml
data/raw/: drug_pairs.jsonl
data/reference/: amlodipine.json  azithromycin.json  citalopram.json  clopidogrel.json  fluconazole.json  ibuprofen.json  lisinopril.json  metformin.json  omeprazole.json  sertraline.json  tramadol.json  warfarin.json
docs/: api.md  architecture.md  experiments.md  model_card.md  reproducibility.md
docs/adr/: 0001-local-object-store-retrieval.md
examples/: batch_requests.json  prediction_request.json
infrastructure/docker/: Dockerfile
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
scripts/: run_pipeline.py
src/drug_interaction_detection/: __init__.py  domain.py
src/drug_interaction_detection/api/: __init__.py  server.py
src/drug_interaction_detection/cli/: __init__.py  main.py
src/drug_interaction_detection/config/: settings.py
src/drug_interaction_detection/data/: __init__.py  dataset.py
src/drug_interaction_detection/evaluation/: __init__.py  metrics.py  reporting.py
src/drug_interaction_detection/features/: __init__.py  extractors.py
src/drug_interaction_detection/inference/: __init__.py  service.py
src/drug_interaction_detection/modeling/: __init__.py  baselines.py  pipeline.py  softmax.py
src/drug_interaction_detection/monitoring/: __init__.py  metrics.py
tests/: conftest.py  test_api.py  test_dataset.py  test_inference.py  test_modeling.py  test_reporting.py  test_tracking.py
(+8 files in other folders)
