[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drug-interaction-detection-system"
version = "0.1.0"
description = "Research-grade drug-drug interaction detection system with reproducible pipelines and retrieval-backed inference."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenAI Codex" }]
dependencies = ["pydantic>=2.8,<3.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ddi = "drug_interaction_detection.cli.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

